# FakePlacer

./: CMakeLists.txt
cmake/: FakePlacerConfig.cmake.in
include/fakeplacer/: fakeplacer.h
src/: fakeplacer.cpp
